# atlas

./: .gitattributes  .gitignore  .harper-dictionary.txt  16gb.json  24gb.json  32gb.json  README.md  app.py  dataprep.py  local.json  models.py  overfit_test.py  pipeline_terrain.py  prodigy.py  pyproject.toml  pyrightconfig.json  remote.json  setup.sh  t2iadapter.py  test.py  test_dataloading.py  train_controlnet.py  train_controlnet_distill.py  train_local.ps1  train_remote.sh  train_remote_controlnet.sh  train_remote_controlnet_distill.sh  train_remote_t21.sh  train_t2i.py  train_utils.py
.zed/: tasks.json
dataset/: add_prompts.py  collect.py  create_features.py  download_img.py  download_meta.py  feature_map.py  sketch.ipynb  test.ipynb  test.py
thesis/: hgb.sty  hgbabbrev.sty  hgbalgo.sty  hgbarticle.cls  hgbbib.sty  hgbdict.sty  hgbheadings.sty  hgblistings.sty  hgbmath.sty  hgbpdfa.sty  hgbreferences.bib  hgbreport.cls  hgbtheme-custom.sty  hgbtheme-default.sty  hgbtheme-fhooe24.sty  hgbthesis.cls  hgbvars.sty  main.bcf  main.bcf-SAVE-ERROR  main.tex
thesis/back/: appendix_a.tex  appendix_b.tex
thesis/chapters/: background.tex  conclusion.tex  experiments.tex  introduction.tex  methodology.tex  research.tex
thesis/front/: abstract.tex  kurzfassung.tex
