[project]
name = "atlas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.9.*"
dependencies = [
    "accelerate>=1.10.1",
    "affine>=2.4.0",
    "bitsandbytes>=0.47.0",
    "daft[huggingface]>=0.6.3",
    "datasets>=4.1.1",
    "diffusers>=0.35.1",
    "fsspec>=2025.9.0",
    "gradio>=4.0.0",
    "ipywidgets>=8.1.7",
    "leafmap>=0.52.4",
    "plotly>=5.0.0",
    "matplotlib>=3.9.4",
    "numpy<2",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "pybind11>=3.0.1",
    "pysheds>=0.5",
    "rasterio>=1.4.3",
    "s3fs>=2025.9.0",
    "scikit-image>=0.24.0",
    "setuptools>=80.9.0",
    "skan>=0.13.0",
    "tensorboard>=2.20.0",
    "tqdm>=4.67.1",
    "transformers>=4.56.2",
    "wheel>=0.45.1",
    "xformers>=0.0.32.post2",
    "torchvision>=0.23.0",
]
