[project]
name = "atlas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.9.*"
dependencies = [
    "accelerate>=1.10.1",
    "affine>=2.4.0",
    "bitsandbytes>=0.47.0",
    "daft[huggingface]>=0.6.3",
    "datasets>=4.1.1",
    "diffusers>=0.35.1",
    "fsspec>=2025.9.0",
    "gradio>=4.0.0",
    "ipywidgets>=8.1.7",
    "leafmap>=0.52.4",
    "plotly>=5.0.0",
    "matplotlib>=3.9.4",
    "numpy<2",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "pybind11>=3.0.1",
    "pysheds>=0.5",
    "rasterio>=1.4.3",
    "s3fs>=2025.9.0",
    "scikit-image>=0.24.0",
    "setuptools>=80.9.0",
    "skan>=0.13.0",
    "tensorboard>=2.20.0",
    "tqdm>=4.67.1",
    "transformers>=4.56.2",
    "wheel>=0.45.1",
    "richdem>=0.3.4",
    "pyflwdir>=0.5.10",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "xformers>=0.0.30 ; sys_platform == 'linux'",
    "triton>=3.2.0 ; sys_platform == 'linux'",
    "triton-windows>=3.2.0 ; sys_platform == 'win32'",
    "flash-attn>=2.8.3 ; sys_platform == 'linux'",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
xformers = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
flash-attn = [
    {
        url    = "https://huggingface.co/strangertoolshf/flash_attention_2_wheelhouse/resolve/main/wheelhouse-flash_attn-2.8.3/linux_x86_64/torch2.7/cu12/abiTRUE/cp39/flash_attn-2.8.3+cu12torch2.7cxx11abiTRUE-cp39-cp39-linux_x86_64.whl",
        marker = "sys_platform == 'linux'"
    },
]

[[tool.uv.index]]
name     = "pytorch-cu128"
url      = "https://download.pytorch.org/whl/cu128"
explicit = true
